{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "fecee17f-7eff-4d54-af0e-6b087f321f86",
            "actions": [
                {
                    "name": "leftRudder",
                    "type": "Button",
                    "id": "94b18dd0-b6cc-4d74-85c5-ff7992042b50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rightRudder",
                    "type": "Button",
                    "id": "6d75389b-8376-4c50-b6eb-4b5971484606",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "accel",
                    "type": "Button",
                    "id": "ec95ec44-2920-4deb-aabf-5cc82e542f19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "deccel",
                    "type": "Button",
                    "id": "575cc71f-1644-433f-bd35-0f7d1453e3f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "steer",
                    "type": "Value",
                    "id": "7b1a8355-e3ac-41cc-8b1a-d0d57f2f12ed",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "camera",
                    "type": "Value",
                    "id": "a403a2f8-bb9c-4c48-93f5-4cf21d4f8304",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "resetCam",
                    "type": "Button",
                    "id": "9ab6878b-d14d-49f0-9227-e15dafab80d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "67fef678-fe10-4e70-9db4-6af89a735c0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "cfcd80b9-0445-4ca2-95e5-9fd07ba36f2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "8a48be8e-91a8-4270-baeb-ed7aa2872240",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "5134e0a0-6eb5-4a88-b67d-7f627a06bd68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "60243c57-de55-4568-8d31-2618d80073c0",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "leftRudder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c367638b-fd07-42a9-8d81-38661f6cd90c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightRudder",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0956a07e-eade-43bb-a9ad-232b12fe7714",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "accel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e399360b-b0b4-4fd1-8972-c7855b175373",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "deccel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "171868f6-ed8a-4398-964c-649efc6949a5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb686df6-9232-4c67-9b42-3fc12b103983",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b5d02fb-0f8a-4088-83e8-12bc0af318b8",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "resetCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86448ad2-7af6-4c1f-b50d-29ba2e300fe4",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "325b4991-faba-4200-8c4c-a2a9bbedb608",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a977198f-fef3-4cd4-a9ec-efd128c214e2",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0afa3d93-3ec6-4283-bf3b-4d68b1927a3a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}